; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_tun.c_clear_tuntap.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_tun.c_clear_tuntap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tuntap = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tuntap*)* @clear_tuntap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_tuntap(%struct.tuntap* %0) #0 {
  %2 = alloca %struct.tuntap*, align 8
  store %struct.tuntap* %0, %struct.tuntap** %2, align 8
  %3 = load %struct.tuntap*, %struct.tuntap** %2, align 8
  %4 = bitcast %struct.tuntap* %3 to { i64, i32* }*
  %5 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %4, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @CLEAR(i64 %6, i32* %8)
  %10 = load %struct.tuntap*, %struct.tuntap** %2, align 8
  %11 = getelementptr inbounds %struct.tuntap, %struct.tuntap* %10, i32 0, i32 0
  store i32 -1, i32* %11, align 8
  ret void
}

declare dso_local i32 @CLEAR(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
